<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:background="@color/bc"
    android:orientation="vertical"
    tools:context="kg.app.kuba.switchs.Mainfone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvmainfone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn1"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/switch1" />

        <Button
            android:id="@+id/btn2"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch2" />

        <Button
            android:id="@+id/btn3"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch3" />

        <Button
            android:id="@+id/btn4"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch4" />

        <Button
            android:id="@+id/btn5"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch5" />

        <Button
            android:id="@+id/btn6"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch6" />

        <Button
            android:id="@+id/btn7"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch7" />

        <Button
            android:id="@+id/btn8"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch8" />
    </LinearLayout>

</LinearLayout>
